# agentspec

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest_plugin.py  requirements.txt
.github/workflows/: ci.yml
agentspec/: __init__.py  config.py  contracts.py  pytest_plugin.py  recorder.py  reporter.py
agentspec/adapters/: __init__.py  anthropic.py
benchmarks/: run_benchmark.py  test_benchmark.py  test_stress.py
core/: contracts.py  recorder.py  reporter.py
demo/: demo.py
docs/: architecture.md
examples/case_study_research_agent/: test_research_agent.py
examples/case_study_research_agent/fixtures/: good_session.json  runaway_session.json
tests/: test_adapter_anthropic.py  test_core.py  test_integration.py  test_scenarios.py
