[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentspec"
version = "0.1.0"
description = "pytest-style behavioral contracts for LLM agent tool-call sequences"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sai Rakshith Muda", email = "rakshithmuda@gmail.com"},
]
keywords = ["llm", "agents", "testing", "contracts", "pytest", "behavioral-testing", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "anthropic>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/rakshithmuda22/agentspec"
Repository = "https://github.com/rakshithmuda22/agentspec"
Issues = "https://github.com/rakshithmuda22/agentspec/issues"

[project.entry-points.pytest11]
agentspec = "agentspec.pytest_plugin"

[tool.setuptools.packages.find]
include = ["agentspec*"]
